grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: meitaltal
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: tomer-prom-grafana
    app.kubernetes.io/name: grafana
  ports:
    - name: grafana-port
      port: 3000
      targetPort: 3000
      protocol: TCP
