mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mariadb
  namespace: tomer
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: wordpress
    tier: mariadb
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress-mariadb
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mariadb
  template:
    metadata:
      namespace: tomer
      labels:
        app: wordpress
        tier: mariadb
    spec:
      containers:
        - image: public.ecr.aws/c0m6s3p2/tomer-k8s-inegrative/wordpress:latest
          name: mariadb
          args:
            - "--default-authentication-plugin=mysql_native_password"
          ports:
            - containerPort: 3306
              name: mariadb

          volumeMounts:
            - name: tomer-db-vc
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: tomer-db-vc
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ebs-sc-tomer
        resources:
          requests:
            storage: 1Gi
