wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-tomer
  namespace: tomer
  labels:
    app: wordpress-tomer
spec:
  selector:
    app: wordpress-tomer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-tomer
  namespace: tomer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-tomer
  template:
    metadata:
      labels:
        app: wordpress-tomer
    spec:
      containers:
        - name: wordpress-tomer
          image: public.ecr.aws/c0m6s3p2/tomer-k8s-inegrative/wordpress:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wordpress-volume
              mountPath: /var/www/html
      volumes:
        - name: wordpress-volume
          persistentVolumeClaim:
            claimName: wp-pv-claim-tomer
