ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomer-app-ingress
  namespace: tomer
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  namespace: tomer
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
